--- a/Source/DotSpatial.Data/DotSpatial.Data.csproj
+++ b/Source/DotSpatial.Data/DotSpatial.Data.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.6.0" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.6.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="System.Data.OleDb" Version="4.6.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
