--- a/Source/DotSpatial.Extensions/DotSpatial.Extensions.csproj
+++ b/Source/DotSpatial.Extensions/DotSpatial.Extensions.csproj
@@ -10,5 +10,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.6.0" />
   </ItemGroup>
 </Project>
